fixed padding in grid on mobiles and changed scrollbar color to variables

--- a/src/index.css
+++ b/src/index.css
@@ -62,9 +62,9 @@
   }
 
   .scrollbar::-webkit-scrollbar-thumb {
-    background: #badeff;
+    background: rgb(var(--mainColor-100));
     border-radius: 100vh;
-    border: 1px solid #89acce;
+    border: 1px solid rgb(var(--mainColor-200));
   }
 
   .scrollbar::-webkit-scrollbar-thumb:hover {
